# ChangeLog for dev-ruby/ruby-feedparser
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  ruby-feedparser-0.2.ebuild:
  Add IUSE+SLOT

  23 Jun 2006; David Shakaryan <d@ompty.org> +ruby-feedparser-0.2.ebuild:
  New ebuild for bug #118682 by Sam Kyritsoglou.
