@@ -1,4 +1,6 @@
 DIST ruby-feedparser-0.2.tgz 392767 RMD160 9cb88449b558a2d68ff6b7b1771609a74d8e49a3 SHA1 ce2298aa440c6911154075cf327e6b025d6b7b4b SHA256 94bfe98ae5a1ecaffd2cf80ef00e9ddec72d5e9483949c70398d8cfe94074b0a
+DIST ruby-feedparser-0.6.tgz 32070 RMD160 bd3b5bcb680f0030af06ebda97208fa1be3197c2 SHA1 a5928c30fa8e3e9ee8e2f0c6522e9980949a7919 SHA256 79a391423c50ccca845baf87df7a9c336d1df8c9b0566ffde413656a7647efa7
 EBUILD ruby-feedparser-0.2.ebuild 347 RMD160 0cc6cd2b1ec01709f4da2f66c82fff3c1415fac6 SHA1 936110d3b3954016267d76c131c9710ff312fb62 SHA256 1abaf921d818781c1561a73c631c307bbba425cdcceecba1f119544e59ba54a8
-MISC ChangeLog 355 RMD160 97eb9ccf594633c317b3c1b34335b145a20673c7 SHA1 3f705c90af91452b7b400f79ce6b7f5648b84e45 SHA256 4671637077e31d3cb96e0be2db34d4678b6dff4d687a179ec11d5e81f33d6981
+EBUILD ruby-feedparser-0.6.ebuild 511 RMD160 2b59bb93918ad14465bd1c0b9c5c6acdc88935af SHA1 2469e5602be18c5e84470281f24ef1b3a59e0dcb SHA256 e1a5f8e8601fa95b0f7d2c412b95b359b4e8aa2b0d2263710ee66d1b0728fb02
+MISC ChangeLog 808 RMD160 8f1e457b30794623bad13f6d820ec3327312f322 SHA1 73ca24f40e43901c3831432903ee12bc10e5d54f SHA256 694878462f778dd848260566478add98ab1566448bdb5cbca7aa190608d62fe7
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
