@@ -2,6 +2,18 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
+  +ruby-feedparser-0.6.ebuild:
+  Version bump for ruby-feedparser. Bug 105122.
+
+  24 Nov 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
+  +ruby-feedparser-0.6.ebuild:
+  Version bump for ruby-feedparser. Bug 105122.
+
+  24 Nov 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
+  +ruby-feedparser-0.6.ebuild:
+  Version bump for ruby-feedparser. Bug 105122.
+
   29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   ruby-feedparser-0.2.ebuild:
   Add IUSE+SLOT
